--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-master": "mkdir out && cp -R img out && ecmarkup --verbose spec.html out/index.html --css out/ecmarkup.css --js out/ecmarkup.js",
     "build": "npm run clean && npm run build-master",
     "build-travis": "npm run clean && npm run build-master && npm run build-es2016",
+    "update-pages": "node node_modules/ecmarkup/bin/ecmarkup.js decorators.html index.html --css _ecmarkup.css --js _ecmarkup.js && git checkout gh-pages && rm index.html ecmarkup.css ecmarkup.js && mv _index.html index.html && mv _ecmarkup.css ecmarkup.css && mv _ecmarkup.js ecmarkup.js && git add index.html ecmarkup.js ecmarkup.css && git commit -m \"update pages\" && git checkout master",
     "clean": "rm -rf out",
     "test": "exit 0",
     "watch": "npm run clean && mkdir out && cp -R img out && ecmarkup --watch --verbose spec.html out/index.html --css out/ecmarkup.css --js out/ecmarkup.js"
